objects/EntitlementProduct__c.object
<CustomObject>
    <description>Junction object for many- to- many relationship b/w product and entitlements</description>
    <fields>
        <fullName>Entitlement__c</fullName>
        <label>Entitlement</label>
        <referenceTo>Entitlement__c</referenceTo>
        <relationshipLabel>EntitlementProducts</relationshipLabel>
        <relationshipName>EntitlementProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>EntitlementProducts</relationshipLabel>
        <relationshipName>EntitlementProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>EntitlementProduct</label>
    <nameField>
        <displayFormat>EP{0000}</displayFormat>
        <label>EntitlementProduct Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EntitlementProducts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>